correcting z-index of icons

--- a/css/basic.css
+++ b/css/basic.css
@@ -120,7 +120,7 @@ td {
 	position: absolute;
 	top: 2%;
 	right: 2%;
-	z-index: 2;
+	z-index: 1;
 }
 
 .card a.icon:visited {
